# cpp_crud

./: CMakeLists.txt  README.md  main.cpp
cmake/Modules/: Findmysqlcppconn.cmake
